--- a/form.css
+++ b/form.css
@@ -8,7 +8,7 @@
 
 /* ensure form elements are on separate lines */
 input {
-    display: block;
+    /*display: block;*/
 }
 textarea {
     display: block;
